# remote-tool

./: .cursorrules  .gitignore  BUILD_WINDOWS.md  DATABASE_SCHEMA.md  DEPLOY_WINDOWS.md  DEVELOPMENT.md  ICON_GUIDE.md  README.md  USER_GUIDE.md  __init__.py  build_windows.bat  build_windows.spec  build_windows_cli.spec  cli.py  cliff.toml  csv_export_config.toml  example_usage.py  generate_icons_from_svg.sh  index.html  migrate_to_new_repo.ps1  migrate_to_new_repo.sh  package-lock.json  package.json  requirements.txt  run_ui.py  setup_venv.sh  update-version.sh
.github/workflows/: build-release.yml  build-windows.yml
core/: csv_export.py  db_query.py  deploy.py  ssh_client.py
docs/plans/: 2026-03-05-local-sqlite-query.md  2026-03-05-query-cpu-optimization-design.md  2026-03-18-db-sync-import-design.md  2026-03-18-db-sync-import-implementation.md
src/: App.vue  style.css
src-tauri/: Cargo.toml  config.toml  tauri.conf.json
src-tauri/capabilities/: default.toml
src-tauri/icons/: .gitkeep  GENERATE_ICO_ICNS.md  README.md  preview.html
src-tauri/src/: commands.rs  main.rs
src-tauri/src/deploy/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/query/: mod.rs
src-tauri/src/ssh/: mod.rs
src/components/: SshConnection.vue
src/components/AppDeploy/: DeployForm.vue  DeployLog.vue  StatusCheck.vue
src/components/DataQuery/: ExportDialog.vue  QueryForm.vue  QueryResults.vue
src/stores/: deploy.ts  query.ts  ssh.ts
src/views/: DeployView.vue  QueryView.vue
ui/: tkinter_ui.py
