[package]
name = "remote-tool"
version = "0.1.0"
description = "Remote tool for data query and application deployment"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-ssh2-tokio = "0.12"
tokio-util = { version = "0.7", features = ["codec", "compat"] }
# sqlx 未使用，已移除以减小体积
# sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "macros"] }
anyhow = "1.0"
thiserror = "1.0"
csv = "1.3"
toml = "0.8"
chrono = "0.4"
base64 = "0.21"

[profile.release]
# 优化编译选项：兼顾代码大小和运行速度
opt-level = 3        # 最高级别的速度优化（默认值，兼顾大小和速度）
lto = "thin"         # 使用thin LTO，平衡编译时间和优化效果
codegen-units = 1    # 减少代码生成单元以提升优化效果
strip = true         # 移除调试符号以减小文件体积
panic = "abort"      # 使用abort而非unwind，减小二进制大小

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
